[package]
name = "clips-sys"
description = "Bindgen generated wrapper for CLIPS (clipsrules.net)"
repository = "https://github.com/mtsr/clips-sys"
documentation = "https://docs.rs/clips-sys/"
readme = "README.md"
keywords = ["clips", "rete", "rules", "rules-engine", "expert-system"]
categories = ["external-ffi-bindings"]
license = "MIT"
version = "0.3.0"
authors = ["Jonas Matser <crates@jonasmatser.nl>"]
links = "clips"
build = "build.rs"

[features]
developer = []

[dependencies]

[build-dependencies]
bindgen = "0.46.0"
cc = "1.0.28"
